# insteon-panel

./: .eslintrc.json  .gitignore  .yarnrc.yml  LICENSE  MANIFEST.in  Makefile  README.md  config.cjs  config.js  package.json  package.json.project  pyproject.toml  setup.cfg  setup.py  webpack.config.cjs  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ReleaseActions.yml  TestBuild.yml
build-scripts/: bundle.cjs  bundle.js  env.cjs  paths.cjs  paths.js  removedIcons.json  rollup.cjs  rollup.js  webpack.cjs  webpack.js
build-scripts/babel-plugins/: custom-polyfill-plugin.js
build-scripts/gulp/: clean.js  compress.js  entry-html.js  gallery.js  gen-dummy-icons-json.js  gen-icons-json.js  insteon.js  panel.js  translations-insteon.js  translations.js  webpack.js
insteon_frontend/: __init__.py  version.py
script/: bootstrap  build  develop  merge_requirements.js  upgrade-frontend
script/gulp/: common.js  rollup.js
src/: __init__.py  const.py  entrypoint.ts  insteon-devices-panel.ts  insteon-router.ts  insteon-scenes-panel.ts  insteon-utils-card.ts  insteon-utils-panel.ts  insteon.ts  main.ts
src/config/: device-overrides-panel.ts  dialog-add-device-override.ts  dialog-config-add-x10.ts  dialog-config-modem.ts  dialog-delete-device.ts  show-dialog-add-device-override.ts  show-dialog-config-add-x10.ts  show-dialog-config-modem.ts  show-dialog-delete-device.ts  x10-devices-data-table.ts  x10-devices-page.ts
src/data/: common.ts  config.ts  device.ts  insteon.ts  scene.ts
src/data-table/: insteon-data-table.ts  sort_filter_worker.ts
src/device/: dialog-device-add-x10.ts  dialog-insteon-add-device.ts  dialog-insteon-adding-device.ts  insteon-device-picker.ts  insteon-device-redirect.ts  insteon-device-router.ts  show-dialog-adding-device.ts  show-dialog-device-add-x10.ts  show-dialog-insteon-add-device.ts
src/device/aldb/: dialog-insteon-aldb-record.ts  insteon-aldb-data-table.ts  insteon-device-aldb-page.ts  show-dialog-insteon-aldb-record.ts
src/device/properties/: dialog-insteon-property.ts  insteon-device-properties-page.ts  insteon-properties-data-table.ts  show-dialog-insteon-property.ts
src/localize/: localize.ts
src/localize/languages/: en.json
src/scene/: dialog-insteon-scene-set-on-level.ts  insteon-scene-editor.ts  show-dialog-insteon-scene-set-on-level.ts
src/tools/: added-to-lovelace.ts  address-utils.ts  check_address.ts  get-messages.ts  insteon-logger.ts
src/tools/markdown/: markdown.ts
