[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "insteon-frontend-home-assistant"
version      = "0.5.0"
license      = {text = "MIT License"}
description  = "The Insteon frontend for Home Assistant"
readme       = "README.md"
authors      = [
    {name = "Tom Harris", email = "pyinsteon@harrisnj.net"}
]
requires-python = ">=3.10.0"

[project.urls]
"Homepage" = "https://github.com/pyinsteon/insteon-panel"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["insteon_frontend*"]