[metadata]
name         = insteon-panel-home-assistant
version      = 0.1.0
author       = The pyinsteon development team
author_email = pyinsteon@harrisnj.net
license      = Apache-2.0
platforms    = any
description  = The Insteon Panel Home Assistant frontend
long_description = file: README.md
long_description_content_type = text/markdown
url          = https://github.com/home-assistant/frontend

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.4.0

[options.packages.find]
include =
    insteon_frontend/*

[mypy]
python_version = 3.4
show_error_codes = True
strict = True
